[project]
name = "agentic-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "asyncpg>=0.30.0",
    "chainlit>=2.8.3",
    "dotenv>=0.9.9",
    "greenlet>=3.2.4",
    "openai-agents>=0.3.3",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]
